add initial learn-home website files

--- a/english.html
+++ b/english.html
@@ -92,7 +92,7 @@ body {
 <td>
 <ul class="list list-unstyled  custom-icon">
 <li><a href="https://ncert.nic.in/textbook/pdf/iemh102.pdf"><i class="fa fa-book custom-icon" aria-hidden="true"></i>
-<font color="white">Chapter 2- the sound of music</font></a></li>
+<font color="white">Chapter 2- the road not taken</font></a></li>
   </td>
 <td>
 <ul class="list list-unstyled  custom-icon">
