add initial learn-home website files

--- a/index.html
+++ b/index.html
@@ -132,13 +132,13 @@ function myFunction()  {
 <table>
 <tr>
 <td>
-<a href="https://garg2007.github.io/cbse-learn/maths.html" target="_blank"><img src="https://hosting.photobucket.com/images/i/divyansh2007/iemh1cc.jpg?width=450&height=278&crop=fill" width="300" height="400" ></a>
+<a href="maths.html" target="_blank"><img src="https://hosting.photobucket.com/images/i/divyansh2007/iemh1cc.jpg?width=450&height=278&crop=fill" width="300" height="400" ></a>
 </td>
 <td>
-<a href="https://garg2007.github.io/e-cbse/science.html" target="_blank"><img src="https://hosting.photobucket.com/images/i/divyansh2007/iesc1cc_1_.jpg?width=450&height=278&crop=fill"width="350"height="400"></a>
+<a href="science.html" target="_blank"><img src="https://hosting.photobucket.com/images/i/divyansh2007/iesc1cc_1_.jpg?width=450&height=278&crop=fill"width="350"height="400"></a>
 </td>
 <td>
-<a href="https://garg2007.github.io/e-cbse/english.html" target="_blank"><img src="https://hosting.photobucket.com/images/i/divyansh2007/iebe1cc_1_.jpg?width=450&height=278&crop=fill" width="350" height="400"></a>
+<a href="english.html" target="_blank"><img src="https://hosting.photobucket.com/images/i/divyansh2007/iebe1cc_1_.jpg?width=450&height=278&crop=fill" width="350" height="400"></a>
 </td>
 </tr>
 </table>
