add initial learn-home website files

--- a/english.html
+++ b/english.html
@@ -92,12 +92,12 @@ body {
 <td>
 <ul class="list list-unstyled  custom-icon">
 <li><a href="https://ncert.nic.in/textbook/pdf/iemh102.pdf"><i class="fa fa-book custom-icon" aria-hidden="true"></i>
-<font color="white">Chapter 2- the road not taken</font></a></li>
+<font color="white">poem 1- the road not taken</font></a></li>
   </td>
 <td>
 <ul class="list list-unstyled  custom-icon">
 <li class="first"><a href="https://seo-manager.s3.amazonaws.com/prod/content-files-downloadable-modified/594a8145e4b0918cd7d86116_5e9a07969e955c217f3275f6_1609736195187.pdf" target="_blank"><i class="  fa fa-book custom-icon" aria-hidden="true"></i>
-<font color="white">Chapter 2 solutions</font></a></li>
+<font color="white">poem 1 solutions</font></a></li>
   </ul>
 
 </td>
