add initial learn-home website files

--- a/english.html
+++ b/english.html
@@ -88,20 +88,7 @@ body {
 </ul>
 </td>
 </tr>
-<tr>
-<td>
-<ul class="list list-unstyled  custom-icon">
-<li><a href="https://ncert.nic.in/textbook/pdf/iemh102.pdf"><i class="fa fa-book custom-icon" aria-hidden="true"></i>
-<font color="white">poem 1- the road not taken</font></a></li>
-  </td>
-<td>
-<ul class="list list-unstyled  custom-icon">
-<li class="first"><a href="https://seo-manager.s3.amazonaws.com/prod/content-files-downloadable-modified/594a8145e4b0918cd7d86116_5e9a07969e955c217f3275f6_1609736195187.pdf" target="_blank"><i class="  fa fa-book custom-icon" aria-hidden="true"></i>
-<font color="white">poem 1 solutions</font></a></li>
-  </ul>
 
-</td>
-</tr>
 <tr>
 <td>
 <ul class="list list-unstyled  custom-icon">
@@ -245,6 +232,132 @@ body {
 <li class="first"><a href="https://seo-manager.s3.amazonaws.com/prod/content-files-downloadable-modified/594b6f55e4b0ec3b95235305_5e9a07969e955c217f3275f6_1609736195187.pdf" target="_blank"><i class="  fa fa-book custom-icon" aria-hidden="true"></i>
 <font color="white">Chapter 11 solutions</font></a></li>
 </ul>
+</td>
+</tr>
+<tr>
+<td>
+<ul class="list list-unstyled  custom-icon">
+<li><a href="file:///C:/Users/divyansh%20garg/Downloads/NCERT-Book-for-Class-9-English-Poem-The-Road-Not-Taken.pdf"><i class="fa fa-book custom-icon" aria-hidden="true"></i>
+<font color="white">poem 1- the road not taken</font></a></li>
+  </td>
+<td>
+<ul class="list list-unstyled  custom-icon">
+<li class="first"><a href="https://seo-manager.s3.amazonaws.com/prod/content-files-downloadable-modified/594a8145e4b0918cd7d86116_5e9a07969e955c217f3275f6_1609736195187.pdf" target="_blank"><i class="  fa fa-book custom-icon" aria-hidden="true"></i>
+<font color="white">poem 1 solutions</font></a></li>
+  </ul>
+
+</td>
+</tr>
+<tr>
+<td>
+<ul class="list list-unstyled  custom-icon">
+<li><a href="file:///C:/Users/divyansh%20garg/Downloads/NCERT-Book-for-Class-9-English-Poem-Wind.pdf"><i class="fa fa-book custom-icon" aria-hidden="true"></i>
+<font color="white">poem 3- wind</font></a></li>
+  </td>
+<td>
+<ul class="list list-unstyled  custom-icon">
+<li class="first"><a href="https://seo-manager.s3.amazonaws.com/prod/content-files-downloadable-modified/594a8145e4b0918cd7d86116_5e9a07969e955c217f3275f6_1609736195187.pdf" target="_blank"><i class="  fa fa-book custom-icon" aria-hidden="true"></i>
+<font color="white">poem 3 solutions</font></a></li>
+  </ul>
+
+</td>
+</tr>
+<tr>
+<td>
+<ul class="list list-unstyled  custom-icon">
+<li><a href="file:///C:/Users/divyansh%20garg/Downloads/NCERT-Book-for-Class-9-English-Rain-on-the-Roof.pdf"><i class="fa fa-book custom-icon" aria-hidden="true"></i>
+<font color="white">poem 4- rain on the roof</font></a></li>
+  </td>
+<td>
+<ul class="list list-unstyled  custom-icon">
+<li class="first"><a href="https://seo-manager.s3.amazonaws.com/prod/content-files-downloadable-modified/594a8145e4b0918cd7d86116_5e9a07969e955c217f3275f6_1609736195187.pdf" target="_blank"><i class="  fa fa-book custom-icon" aria-hidden="true"></i>
+<font color="white">poem 4 solutions</font></a></li>
+  </ul>
+
+</td>
+</tr>
+<tr>
+<td>
+<ul class="list list-unstyled  custom-icon">
+<li><a href="file:///C:/Users/divyansh%20garg/Downloads/NCERT-Book-for-Class-9-English-Poem-The-Lake-Isle-of-Innisfree.pdf"><i class="fa fa-book custom-icon" aria-hidden="true"></i>
+<font color="white">poem 5- the lake isle of innisfree</font></a></li>
+  </td>
+<td>
+<ul class="list list-unstyled  custom-icon">
+<li class="first"><a href="https://seo-manager.s3.amazonaws.com/prod/content-files-downloadable-modified/594a8145e4b0918cd7d86116_5e9a07969e955c217f3275f6_1609736195187.pdf" target="_blank"><i class="  fa fa-book custom-icon" aria-hidden="true"></i>
+<font color="white">poem 5 solutions</font></a></li>
+  </ul>
+
+</td>
+</tr>
+<tr>
+<td>
+<ul class="list list-unstyled  custom-icon">
+<li><a href="file:///C:/Users/divyansh%20garg/Downloads/NCERT-Book-for-Class-9-English-Poem-A-Legend-of-the-Northland.pdf"><i class="fa fa-book custom-icon" aria-hidden="true"></i>
+<font color="white">poem 6- a legend of the northland</font></a></li>
+  </td>
+<td>
+<ul class="list list-unstyled  custom-icon">
+<li class="first"><a href="https://seo-manager.s3.amazonaws.com/prod/content-files-downloadable-modified/594a8145e4b0918cd7d86116_5e9a07969e955c217f3275f6_1609736195187.pdf" target="_blank"><i class="  fa fa-book custom-icon" aria-hidden="true"></i>
+<font color="white">poem 6 solutions</font></a></li>
+  </ul>
+
+</td>
+</tr>
+<tr>
+<td>
+<ul class="list list-unstyled  custom-icon">
+<li><a href="file:///C:/Users/divyansh%20garg/Downloads/NCERT-Book-for-Class-9-English-Poem-The-Duck-and-The-Kangaroo.pdf"><i class="fa fa-book custom-icon" aria-hidden="true"></i>
+<font color="white">poem 7- the duck and the kangaroo</font></a></li>
+  </td>
+<td>
+<ul class="list list-unstyled  custom-icon">
+<li class="first"><a href="https://seo-manager.s3.amazonaws.com/prod/content-files-downloadable-modified/594a8145e4b0918cd7d86116_5e9a07969e955c217f3275f6_1609736195187.pdf" target="_blank"><i class="  fa fa-book custom-icon" aria-hidden="true"></i>
+<font color="white">poem 7 solutions</font></a></li>
+  </ul>
+
+</td>
+</tr>
+<tr>
+<td>
+<ul class="list list-unstyled  custom-icon">
+<li><a href="file:///C:/Users/divyansh%20garg/Downloads/NCERT-Book-for-Class-9-English-Poem-On-Killing-a-Tree.pdf"><i class="fa fa-book custom-icon" aria-hidden="true"></i>
+<font color="white">poem 8- on killing a tree</font></a></li>
+  </td>
+<td>
+<ul class="list list-unstyled  custom-icon">
+<li class="first"><a href="https://seo-manager.s3.amazonaws.com/prod/content-files-downloadable-modified/594a8145e4b0918cd7d86116_5e9a07969e955c217f3275f6_1609736195187.pdf" target="_blank"><i class="  fa fa-book custom-icon" aria-hidden="true"></i>
+<font color="white">poem 8 solutions</font></a></li>
+  </ul>
+
+</td>
+</tr>
+<tr>
+<td>
+<ul class="list list-unstyled  custom-icon">
+<li><a href="file:///C:/Users/divyansh%20garg/Downloads/NCERT-Book-for-Class-9-English-Poem-The-Snake-Trying.pdf"><i class="fa fa-book custom-icon" aria-hidden="true"></i>
+<font color="white">poem 9- the snake trying</font></a></li>
+  </td>
+<td>
+<ul class="list list-unstyled  custom-icon">
+<li class="first"><a href="https://seo-manager.s3.amazonaws.com/prod/content-files-downloadable-modified/594a8145e4b0918cd7d86116_5e9a07969e955c217f3275f6_1609736195187.pdf" target="_blank"><i class="  fa fa-book custom-icon" aria-hidden="true"></i>
+<font color="white">poem 9 solutions</font></a></li>
+  </ul>
+
+</td>
+</tr>
+<tr>
+<td>
+<ul class="list list-unstyled  custom-icon">
+<li><a href="file:///C:/Users/divyansh%20garg/Downloads/NCERT-Book-for-Class-9-English-Poem-A-Slumber-Did-My-Spirit-Seal.pdf"><i class="fa fa-book custom-icon" aria-hidden="true"></i>
+<font color="white">poem 10- a slumber did my spirit seal </font></a></li>
+  </td>
+<td>
+<ul class="list list-unstyled  custom-icon">
+<li class="first"><a href="https://seo-manager.s3.amazonaws.com/prod/content-files-downloadable-modified/594a8145e4b0918cd7d86116_5e9a07969e955c217f3275f6_1609736195187.pdf" target="_blank"><i class="  fa fa-book custom-icon" aria-hidden="true"></i>
+<font color="white">poem 10 solutions</font></a></li>
+  </ul>
+
 </td>
 </tr>
 
