add initial learn-home website files

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ function myFunction()  {
      </tr>
 </table>
 
-<table>
+<table cellspacin="2">
 <tr>
 <td>
 <a href="maths.html" target="_blank"><img src="https://hosting.photobucket.com/images/i/divyansh2007/iemh1cc.jpg?width=450&height=278&crop=fill" width="300" height="400" ></a>
