add initial learn-home website files

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ function myFunction()  {
               <table width="547"  border="0" cellspacing="0" cellpadding="0">
 	<tr>
 	        <td align="left"><img src="https://www.freepnglogos.com/uploads/letter-d-dr-odd-logo-png-1.png" width="80" height="80" ></td>
-	        <td ><a href="https://drive.google.com/file/d/1Rpd_Mc67wZ71HxkLJEIgpwtQ0e2qfo10/view?usp=sharing" target="_blank"><font face="arial" size="6" color="white"> about</font></a></td>
+	        <td><a href="about.html" target="_blank"><font face="arial" size="6" color="white"> about</font></a></td>
 	        <td ><a href="#"><font face="arial" size="6" color="white"> help</font><a></td>
 	        <td ><font face="arial" size="6" color="white"> log in</font></td>
 	        <td ><font face="arial" size="6" color="white"> sign up</font></td>
