--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
     <table cellspacing="20">
       <tr>
         <td><img src="https://lh3.googleusercontent.com/-jXOJ7cjOWSM/X4spg8r5cJI/AAAAAAAAA9o/s5eN23Z1UfE59HqTcp1WURMfWytkxXNxgCEwYBhgLKtQDABHVOhwLsnSOqXkX0yepGkmR3UdV3u46c1ExwSwvJwEffVVAUIfYDhuediUuFqvLUBb3zaeQfsuHsJMgy6wzJsrOESjj6CZRd5K-HjDd0KAq4qpuilW74JU3I-2ZA8oFfy7IKismBuGbupJhwFiXxYNtAKtFKlNOnqiKWF71Xd4czmKOlhrErR3RGV5ORu1lJXBr4bydiXQFi8F0iIK3x0io76K4vnQ7xkW_jZv4BfImTHB1V-x9IwVwiYbW49Mej9xP135cUAuTZRnzrZcKRV44T5Dx0Pc4GS4N26hw69ph_P05ETyfS0D2CicXwCSrf8Izmd0RvoDewRNMx4uy58nifw1HUsPu1NeKg2_HWaOpVrkZCWrLNF88aBekqxbXb3zRp_seLG9GsM781DXpkj6u9OdMBRuXok6UOPsPzlYLr10XFlP0z9ZE2c8TuNXABtf_yfdXGFC9OBn2MmGlla7L4k6lYCSYn3laiglk0vMa8qPjFUEN1fjH-ke3BsNppDjCdGYhSXl1ZnVLLaeBKdjS_U_mFSUVr1Aji2P7y1T7nSRYfxWXSmY8BGlKQa97DcJag48Qy_PYZrnILd1bU_-Fe6bB_RWBIoyBvwq9kQJBwY1xMLmi4IYG/w140-h140-p/2020-10-17.jpg" alt="divyansh profile picture"></td>
-        <td><h1>Angela Yu</h1>
+        <td><h1>divyansh garg</h1>
         <p><em>student of sjc </em></p>
         <p>I am an iOS and Web Developer. </p></td>
       </tr>
