add initial learn-home website files

--- a/about.html
+++ b/about.html
@@ -2,24 +2,25 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>divyansh</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <title>divyansh Personal Site</title>
+     
+    <link rel="stylesheet" href="styles.css">
   </head>
 
-  <body>
+  <body >
     <table cellspacing="20">
       <tr>
-        <td><img src="https://lh3.googleusercontent.com/-jXOJ7cjOWSM/X4spg8r5cJI/AAAAAAAAA9o/s5eN23Z1UfE59HqTcp1WURMfWytkxXNxgCEwYBhgLKtQDABHVOhwLsnSOqXkX0yepGkmR3UdV3u46c1ExwSwvJwEffVVAUIfYDhuediUuFqvLUBb3zaeQfsuHsJMgy6wzJsrOESjj6CZRd5K-HjDd0KAq4qpuilW74JU3I-2ZA8oFfy7IKismBuGbupJhwFiXxYNtAKtFKlNOnqiKWF71Xd4czmKOlhrErR3RGV5ORu1lJXBr4bydiXQFi8F0iIK3x0io76K4vnQ7xkW_jZv4BfImTHB1V-x9IwVwiYbW49Mej9xP135cUAuTZRnzrZcKRV44T5Dx0Pc4GS4N26hw69ph_P05ETyfS0D2CicXwCSrf8Izmd0RvoDewRNMx4uy58nifw1HUsPu1NeKg2_HWaOpVrkZCWrLNF88aBekqxbXb3zRp_seLG9GsM781DXpkj6u9OdMBRuXok6UOPsPzlYLr10XFlP0z9ZE2c8TuNXABtf_yfdXGFC9OBn2MmGlla7L4k6lYCSYn3laiglk0vMa8qPjFUEN1fjH-ke3BsNppDjCdGYhSXl1ZnVLLaeBKdjS_U_mFSUVr1Aji2P7y1T7nSRYfxWXSmY8BGlKQa97DcJag48Qy_PYZrnILd1bU_-Fe6bB_RWBIoyBvwq9kQJBwY1xMLmi4IYG/w140-h140-p/2020-10-17.jpg" alt="divyansh profile picture"></td>
+        <td><img src="https://lh3.googleusercontent.com/-WcDwR7gG3eg/X7kYOS03ADI/AAAAAAAAAAY/7zbTv0s1eHcpCbd3AxOmbwv8iEqm8AF1QCEwYBhgLKtQDABHVOhwaX0bQyeVVsQJ2jGsaIMlRpc1YSRcoql_IzfzAIJMZrqfOT1mCpS90XUnUsftgjXwnsuGJl-SG6ffkuCZNrkfYxeqdtqQTRBRnHDDRdmq0Z2UNymaLWLYncHcbSfiLKrtgd41Mx_z9lw8GBCLXU035sZvnZr91PY8X4NofJ-Pgz3S5rLqdhpRB4okk6LQ4HID9eHDgrSnFrdnyyD9TEAmns51GIQyWh-zRlkBV7RZn5MLjFgXYu6AHp75LHfvmXbdG9zn5X0hUMxEBZeEPLG6OK2oAHdunx3TzSR0tO5-TU13RyPfW5vnlmlkx0U4gUl0pMuF7hSNUq_Ygy_V7RIoWxprU-Vlk2gleXlxf0-30QsT7Y1Ca0wKCusYvz-2oWhGtnfBk5YTlSmrHxInsWgC1ZctwqbfqKnlsy44PqeNA-pwooKDo2OFq1YWuXdcnzDyRU7nCdbkwIjfBu-GRLYOhrs-PGlhGsPC9GCqov15b1xYsOFDun1yaAuKeDxeRW199yJ_A_8OHAsRjKrqdEiL692ErcBiOEoeIjacnS0LdRh_EfQLl9sLwV1Lq9BZkbRJtxl-Jpyeg-EWaCQaOWiP5fOHkLwYxFwniR7cgr9aoMNCi0YYG/w140-h139-p/photo.jpeg" alt="divyansh profile picture"></td>
         <td><h1>divyansh garg</h1>
-        <p><em>student of sjc </em></p>
+        <p><em>student of <strong><a href="#">s.j.c</a></strong>.</em></p>
         <p>I am an iOS and Web Developer. </p></td>
       </tr>
     </table>
     <hr>
     <h3>Books and Teaching</h3>
     <ul>
-      <li>The Complete iOS App Development Bootcamp</li>
-      <li>The Complete Web Development Bootcamp</li>
+      <li>sudent in class 9th</li>
+      <li>class 8th</li>
     </ul>
     <hr>
     <h3>Work Experience</h3>
@@ -37,7 +38,7 @@
         </tr>
         <tr>
           <td>2010-2013</td>
-          <td>student at sjc</td>
+          <td>student of sjc</td>
         </tr>
         <tr>
           <td>2013-2015</td>
@@ -50,19 +51,19 @@
     <table cellspacing="10">
       <tr>
         <td>iOS Development</td>
-        <td>??????????</td>
+        <td>⭐️⭐️⭐️⭐️⭐️</td>
       </tr>
       <tr>
         <td>Web Development</td>
-        <td>??????????</td>
+        <td>⭐️⭐️⭐️⭐️⭐️</td>
       </tr>
        <tr>
         <td>Programming</td>
-        <td>??????????</td>
+        <td>⭐️⭐️⭐️⭐️⭐️</td>
       </tr>
       <tr>
-        <td>drawing</td>
-        <td>????</td>
+        <td>Photography</td>
+        <td>⭐️⭐️</td>
       </tr>
     </table>
     <hr>
