--- a/index.html
+++ b/index.html
@@ -1,25 +1,25 @@
 <!doctype html>
 <html>
 <head>
-	<title>learn-cbsc.com</title>
-
+	<title>first page.com</title>
+	
               <style>
-
+	
          a:link{
 	color: red;
 	text-decoration:none;
 	}
           a:visited {
-	color: white;
+	color: blue;
 	}
           a.hover  {
 	color: purple;
-	text-decoration: none;
-	background-color: white;
+	text-decoration: underline;
+	background-color: yellow;
 	}
             a:active {
 	color:blue;
-	}
+	}															
            #contentwrapper{
 	float:  left;
 	width:  100%;
@@ -43,7 +43,7 @@
 
 * {box-sizing: border-box;}
 
-body {
+body { 
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
 }
@@ -60,7 +60,7 @@ body {
   text-align: center;
   padding: 12px;
   text-decoration: none;
-  font-size: 18px;
+  font-size: 18px; 
   line-height: 25px;
   border-radius: 4px;
 }
@@ -90,7 +90,7 @@ body {
     display: block;
     text-align: left;
   }
-
+  
   .header-right {
     float: none;
   }
@@ -102,14 +102,14 @@ select{
 </style>
 <script>
 function myFunction()  {
-
+ 
 </script>
 
-
+               </style>
 <meta http-equiv="content-type" content="text/html; charset-utf=8"/>
 
 </head>
-
+<button type="button" onclick="getURL();">Get Page URL</button>
 <body  class="body" background="https://wallpapercave.com/wp/wp2588556.jpg" >
 
 <table width="100%" height="90" border="0" cellspacing="5" cellpadding="5" bgcolor=" transparent">
@@ -118,27 +118,40 @@ function myFunction()  {
               <table width="547"  border="0" cellspacing="0" cellpadding="0">
 	<tr>
 	        <td align="left"><img src="https://www.freepnglogos.com/uploads/letter-d-dr-odd-logo-png-1.png" width="80" height="80" ></td>
-	        <td><a href="about.html" target="_blank"><font face="arial" size="6" color="white"> about</font></a></td>
+	        <td ><a href="https://drive.google.com/file/d/1Rpd_Mc67wZ71HxkLJEIgpwtQ0e2qfo10/view?usp=sharing" target="_blank"><font face="arial" size="6" color="white"> about</font></a></td>
 	        <td ><a href="#"><font face="arial" size="6" color="white"> help</font><a></td>
 	        <td ><font face="arial" size="6" color="white"> log in</font></td>
 	        <td ><font face="arial" size="6" color="white"> sign up</font></td>
 	</tr>
                 </table>
-
+             
         </td>
      </tr>
 </table>
+<!--
+ <table width="100%" height="150" border="0" cellspacing="5" cellpadding="5" bgcolor="transparent">
 
-<table cellspacin="2">
+	<tr>
+	    <td align="center">
+	        <table width="600"border="0" cellspacing="1" cellpaddding="1">
+		  <tr>
+		       <td align="left"><img src="https://app.photobucket.com/u/divyansh2007/p/868eb84c-a4b4-4e88-adc6-949b0e0a63cc" width="300" height="400"/></td>
+		         <td align="center"<img src="https://hosting.photobucket.com/images/i/divyansh2007/iesc1cc_1_.jpg?width=450&height=278&crop=fill" width="300" height="350"/></td>
+		        <td align="right"<img src="https://hosting.photobucket.com/images/i/divyansh2007/iebe1cc_1_.jpg?width=450&height=278&crop=fill" width="300" height="350"/></td>
+		  </tr>
+	    </td>
+	</tr>
+</table>-->
+<table>
 <tr>
 <td>
-<a href="maths.html" target="_blank"><img src="https://hosting.photobucket.com/images/i/divyansh2007/iemh1cc.jpg?width=450&height=278&crop=fill" width="300" height="400" ></a>
+<a href="https://garg2007.github.io/cbse-learn/maths.html" target="_blank"><img src="https://hosting.photobucket.com/images/i/divyansh2007/iemh1cc.jpg?width=450&height=278&crop=fill" width="300" height="400" ></a>
 </td>
 <td>
-<a href="science.html" target="_blank"><img src="https://hosting.photobucket.com/images/i/divyansh2007/iesc1cc_1_.jpg?width=450&height=278&crop=fill"width="350"height="400"></a>
+<a href="https://garg2007.github.io/e-cbse/science.html" target="_blank"><img src="https://hosting.photobucket.com/images/i/divyansh2007/iesc1cc_1_.jpg?width=450&height=278&crop=fill"width="350"height="400"></a>
 </td>
 <td>
-<a href="english.html" target="_blank"><img src="https://hosting.photobucket.com/images/i/divyansh2007/iebe1cc_1_.jpg?width=450&height=278&crop=fill" width="350" height="400"></a>
+<a href="https://garg2007.github.io/e-cbse/english.html" target="_blank"><img src="https://hosting.photobucket.com/images/i/divyansh2007/iebe1cc_1_.jpg?width=450&height=278&crop=fill" width="350" height="400"></a>
 </td>
 </tr>
 </table>
@@ -147,17 +160,92 @@ function myFunction()  {
 	   <td height="72" align="center" valign="top">
 	       <table width="730" border="0" cellspacing="1" cellpadding="1">
 		        <tr>
-			<td width="726" align="center"><font face="verdana,geneva,sans-serif"
-		        color="white" size="6">just click on the cover page  to get the book in
+			<td width="726" align="center"><font face="verdana,geneva,sans-serif" 
+		        color="white" size="6">just click on the cover page  to get the book in 
 			<strong><br/>pdf format </strong>
 		        <br/>
-			</font></td>
+			</font></td> 
 			</tr>
 		</table>
-
+	         
 	</tr>
 </table>
+                        <!--
+	<tr>
+	    <td height="72" align="center" valign="top"
+		<font color="white" size="2" face="arial">
+		<strong>register for our newsletter:</strong></font><br/>
 
+		<form name="contact" method="post" action="send.php">
+		<input type="text" name="email"/>
+		<input type="submit" name="button" value="submit"/>
+		</form>
+	    </td>
+	</tr>-->
+</table>
+<!--
+<table width="100%" height="236" border="0" cellspacing="5" cellpadding="5" bgcolor="white">
+
+	<tr>
+		<td height="72" align="center" valign="top">
+		   <table width="900" border="1" borderbolor="#cccccc" cellspacing="0" cellpadding="8">
+		     <tr>
+			<td width="268">
+			<font face="verdana,geneva,sans-serif" color="black" size="3">
+			<strong><u>about us
+			</u></strong></font></td>
+
+			<td width="286">
+			<font face="verdana,geneva,sans-serif" color="black" size="3">
+			<strong><u>our vision
+			</u></strong></font></td>
+	
+			<td width="290">
+			<font face="verdana,geneva,sans-serif" color="black" size="3">
+			<strong><u>services
+			</u></strong></font></td>
+		     </tr>
+
+		     <tr>
+			<td><font face="verdana,sans-saris,geneva" color="black" size="2">
+			     i'm a paragraph, click here to add your own text and edit me.
+			     it's easy, just click "edit text" or double click me and you can start 
+			     rading your own content and make changes to the font, feel free to drag and drop me 
+			     anywhere you like on your page, i am a great place to write more. tell a storty and 
+			     let your users let you know </font></td>
+
+
+			<td valign="top"><font face="verdana,sans-saris,geneva" color="black" size="2">
+			     i'm a paragraph, click here to add your own text and edit me.
+			     it's easy, just click "edit text" or double click me and you can start 
+			     rading your own content and make changes to the font, feel free to drag and drop me 
+			     anywhere you like on your page, i am a great place to write more. tell a storty and 
+			     let your users let you know </font></td>
+
+			<td valign="top">	
+			    <font face="verdena,geneva, sens-serif" color="black" size="2"
+			      <ul>
+				   <li>strategy &amp; organisation<br/>
+					</li>
+				   <li>corpporate developement<br/>
+					</li>
+				   <li>globalisation<br/>
+					</li>
+				   <li>operation management<br/>
+					</li>
+				   <li>corporate finance<br/>
+					</li>
+				   <li>it management<br/>
+					</li>
+			         </ul>
+			    </font>
+		        </td>		    			    			    
+		    </tr>
+	     </table>
+	</td>
+    </tr>
+</table>
+-->
 <table width="100%" height="50" border="0" cellspacing="1" cellpadding="1"  bgcolor="#F0F0F0">
         <tr>
             <td align="center">
@@ -179,13 +267,13 @@ function myFunction()  {
 	<a href="https://twitter.com/Twitter?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"><img src="https://www.freepnglogos.com/uploads/twitter-logo-png/twitter-bird-symbols-png-logo-0.png"width="80" height="80"><a>
 <h4>you can also messege us on 7987170442 </h4>
                   </td>
-          </tr>
+          </tr> 
           </table>
        </td>
      </tr>
 </table>
 
-
+ 
 <table width="100%" height="60" border="0" cellspacing="5" cellpadding="5" bgcolor="#000000">
 
 	<tr>
