add initial learn-home website files

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!doctype. html>
 <html>
 <head>
 	<title>first page.com</title>
@@ -118,7 +118,7 @@ function myFunction()  {
               <table width="547"  border="0" cellspacing="0" cellpadding="0">
 	<tr>
 	        <td align="left"><img src="https://www.freepnglogos.com/uploads/letter-d-dr-odd-logo-png-1.png" width="80" height="80" ></td>
-	        <td ><a href="https://drive.google.com/file/d/1Rpd_Mc67wZ71HxkLJEIgpwtQ0e2qfo10/view?usp=sharing" target="_blank"><font face="arial" size="6" color="white"> about</font></a></td>
+	        <td ><a href="about.html" target="_blank"><font face="arial" size="6" color="white"> about</font></a></td>
 	        <td ><a href="#"><font face="arial" size="6" color="white"> help</font><a></td>
 	        <td ><font face="arial" size="6" color="white"> log in</font></td>
 	        <td ><font face="arial" size="6" color="white"> sign up</font></td>
@@ -128,20 +128,7 @@ function myFunction()  {
         </td>
      </tr>
 </table>
-<!--
- <table width="100%" height="150" border="0" cellspacing="5" cellpadding="5" bgcolor="transparent">
 
-	<tr>
-	    <td align="center">
-	        <table width="600"border="0" cellspacing="1" cellpaddding="1">
-		  <tr>
-		       <td align="left"><img src="https://app.photobucket.com/u/divyansh2007/p/868eb84c-a4b4-4e88-adc6-949b0e0a63cc" width="300" height="400"/></td>
-		         <td align="center"<img src="https://hosting.photobucket.com/images/i/divyansh2007/iesc1cc_1_.jpg?width=450&height=278&crop=fill" width="300" height="350"/></td>
-		        <td align="right"<img src="https://hosting.photobucket.com/images/i/divyansh2007/iebe1cc_1_.jpg?width=450&height=278&crop=fill" width="300" height="350"/></td>
-		  </tr>
-	    </td>
-	</tr>
-</table>-->
 <table>
 <tr>
 <td>
@@ -183,69 +170,6 @@ function myFunction()  {
 	    </td>
 	</tr>-->
 </table>
-<!--
-<table width="100%" height="236" border="0" cellspacing="5" cellpadding="5" bgcolor="white">
-
-	<tr>
-		<td height="72" align="center" valign="top">
-		   <table width="900" border="1" borderbolor="#cccccc" cellspacing="0" cellpadding="8">
-		     <tr>
-			<td width="268">
-			<font face="verdana,geneva,sans-serif" color="black" size="3">
-			<strong><u>about us
-			</u></strong></font></td>
-
-			<td width="286">
-			<font face="verdana,geneva,sans-serif" color="black" size="3">
-			<strong><u>our vision
-			</u></strong></font></td>
-	
-			<td width="290">
-			<font face="verdana,geneva,sans-serif" color="black" size="3">
-			<strong><u>services
-			</u></strong></font></td>
-		     </tr>
-
-		     <tr>
-			<td><font face="verdana,sans-saris,geneva" color="black" size="2">
-			     i'm a paragraph, click here to add your own text and edit me.
-			     it's easy, just click "edit text" or double click me and you can start 
-			     rading your own content and make changes to the font, feel free to drag and drop me 
-			     anywhere you like on your page, i am a great place to write more. tell a storty and 
-			     let your users let you know </font></td>
-
-
-			<td valign="top"><font face="verdana,sans-saris,geneva" color="black" size="2">
-			     i'm a paragraph, click here to add your own text and edit me.
-			     it's easy, just click "edit text" or double click me and you can start 
-			     rading your own content and make changes to the font, feel free to drag and drop me 
-			     anywhere you like on your page, i am a great place to write more. tell a storty and 
-			     let your users let you know </font></td>
-
-			<td valign="top">	
-			    <font face="verdena,geneva, sens-serif" color="black" size="2"
-			      <ul>
-				   <li>strategy &amp; organisation<br/>
-					</li>
-				   <li>corpporate developement<br/>
-					</li>
-				   <li>globalisation<br/>
-					</li>
-				   <li>operation management<br/>
-					</li>
-				   <li>corporate finance<br/>
-					</li>
-				   <li>it management<br/>
-					</li>
-			         </ul>
-			    </font>
-		        </td>		    			    			    
-		    </tr>
-	     </table>
-	</td>
-    </tr>
-</table>
--->
 <table width="100%" height="50" border="0" cellspacing="1" cellpadding="1"  bgcolor="#F0F0F0">
         <tr>
             <td align="center">
