--- a/sign up.html
+++ b/sign up.html
@@ -18,18 +18,18 @@ sign up
 	      <img src="https://hosting.photobucket.com/images/i/divyansh2007/tw.png?width=1920&height=1080&fit=bounds">
 	      <img src="https://hosting.photobucket.com/images/i/divyansh2007/gp.png?width=1920&height=1080&fit=bounds">
 	</div>
-	<form id="login"class="input-group" action="index.html">
+	<form id="login"class="input-group">
 	         <input type="text" class="input-field" placeholder="user id" required>
 	          <input type="text" class="input-field" placeholder="enter password" required>
 	           <input type="checkbox" class="check-box"><span>remember password</span>
-	           <button type="submit" class="submit-btn">log in</button>
+	           <button type="submit" class="submit-btn" action="learn-cbsc.html">log in</button>
 	</form>
-	<form id="register" class="input-group" action="index.html">
+	<form id="register" class="input-group">
 	         <input type="text" class="input-field" placeholder="user id" required>
 	          <input type="email" class="input-field" placeholder="Email id" required>
 	          <input type="text" class="input-field" placeholder="enter password" required>
 	           <input type="checkbox" class="check-box"><span>i agree to the terms and conditions</span>
-	           <button type="submit" class="submit-btn">register</button>
+	           <button type="submit" class="submit-btn" action="learn-cbsc.html">register</button>
 	</form>
       </div>
 </div>
