add initial learn-home website files

--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@ function myFunction()  {
 	        <td align="left"><img src="https://www.freepnglogos.com/uploads/letter-d-dr-odd-logo-png-1.png" width="80" height="80" ></td>
 	        <td ><a href="about.html" target="_blank"><font face="arial" size="6" color="white"> about</font></a></td>
 	        <td ><a href="#"><font face="arial" size="6" color="white"> help</font><a></td>
-	        <td ><font face="arial" size="6" color="white"> log in</font></td>
-	        <td ><font face="arial" size="6" color="white"> sign up</font></td>
+	        <td ><a href="sign up.html"><font face="arial" size="6" color="white"> log in</font></a></td>
+	       
 	</tr>
                 </table>
              
