upload initial learn-home website files

--- a/index.html
+++ b/index.html
@@ -138,6 +138,9 @@ function myFunction()  {
 <a href="https://garg2007.github.io/e-cbse/science.html" target="_blank"><img src="https://hosting.photobucket.com/images/i/divyansh2007/iesc1cc_1_.jpg?width=450&height=278&crop=fill"width="350"height="400"></a>
 </td>
 <td>
+<a href="history.html" target="_blank"><img src="iess1cc.jpg"width="350"height="400"></a>
+</td>
+<td>
 <a href="https://garg2007.github.io/e-cbse/english.html" target="_blank"><img src="https://hosting.photobucket.com/images/i/divyansh2007/iebe1cc_1_.jpg?width=450&height=278&crop=fill" width="350" height="400"></a>
 </td>
 </tr>
